@@ -100,7 +100,8 @@ public:
 	enum type {
 		UNBOUND,
 		BY_KEYCODE,
-		BY_CHARACTER
+		BY_CHARACTER,
+		CLEARED
 	};
 
 	enum type get_type() const { return type_; }
